--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Emmanuel Buckley</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <main id="main"></main>
   </body>
 </html>
